@@ -14,6 +14,7 @@
   <div>
     <h1>news</h1>
     <ul>
+      <li>2018-10-19 : release 2.14-1, compatibility with old rpm releases</li>
       <li>2018-09-12 : release 2.13-1, RECOMMENDS/SUPPLEMENTS rpm tag</li>
       <li>2018-07-20 : release 2.12-1, patch on requires tag(Bruce Jerrick)</li>
       <li>2018-06-10 : release 2.11-3, Made minor grammatical fixes to English language translations (beroset)</li>
